--- a/README
+++ b/README
@@ -1,5 +1,4 @@
 # 26-10-2021
-----------
 
 SOFTWARE
 
@@ -8,8 +7,7 @@ https://www.virtualbox.org/
 Instalación de Vagrant para el sistema operativo del alumno, instalación con valores por defecto desde:
 https://www.vagrantup.com/
 
-27-10-2021
-----------
+#27-10-2021
 
 La máquina virtual y las dependencias pesan 500M y 600M, por lo que sería aconsejable que para mañana hayais realizado este proceso
 
@@ -26,4 +24,6 @@ En el siguiente arranque con `vagrant up` llegaremos a la interfaz de usuario: *
 Recordamos, aunque la interfaz gráfica en la máquina virtual tiene la opción de apagar, la forma de pararlo siempre es mediante `vagrant halt`
 desde la carpeta correspondiente
 
+#28-10-2021
 
+Añadimos scripts para la instalación de la máquina virtual, documentación asociada
