--- a/README
+++ b/README
@@ -26,5 +26,9 @@ desde la carpeta correspondiente
 
 #28-10-2021
 
-Añadimos scripts para la instalación de ZAP, documentación asociada al día 4
+Añadimos scripts para la instalación de la máquina virtual, documentación asociada al día 3
+
+#29-10-2021
+
+Proyecto cypres para el testing de juice-shop, documentación día 4 y guías ASVS y de testing
 
